--- a/src/index.css
+++ b/src/index.css
@@ -93,3 +93,12 @@ h1{
 background: -webkit-linear-gradient(right, #565318, #3C464E);
 background: -moz-linear-gradient(right, #565318, #3C464E);
 background: linear-gradient(to left, #565318, #3C464E); */
+
+.mahesh{
+  height:100px;
+  width: 100px;
+}
+.maheshh{
+  background-color: rgb(38, 136, 210);
+  font-family: cursive;
+}
